# RPICDB

./: .gitignore  LICENSE  README.md  app.py  config.json  extra.py  keep_alive.py  main.py  pyproject.toml  rpicdb.pem  secret_manager.py  setup.md  ssh_ec2.sh  upload_to_ec2.sh  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
cogs/: config.py  drion.py  events.py  fun.py  general.py  info.py  levels.py  log.py  mod.py  moderation.py  owner.py  poll.py  responses.py  settings.py  simple.py  suggested.py  youtube.py
data/: config.json  guilds.json  prefixes.json  users.json
templates/: home.html
